making more stuff more better

--- a/style.css
+++ b/style.css
@@ -44,6 +44,21 @@
 		background: #fff;
 		padding: 1em;
 	}
+
+	.nodeValue {
+		display: inline-block;
+		background-color: #ddd;
+		margin: 0;
+	}
+
+	li > code:first-child {
+		vertical-align: top;
+
+		&::after {
+			content: ": ";
+			color: initial;
+		}
+	}
 }
 
 #rendered_iframe {
