Fixing some things

--- a/html-api-debugger/style.css
+++ b/html-api-debugger/style.css
@@ -45,20 +45,19 @@
 		padding: 1em;
 	}
 
+	.hasNodeValue {
+		&::after {
+			content: ": ";
+			color: initial;
+		}
+	}
+
 	.nodeValue {
 		display: inline-block;
 		background-color: #ddd;
 		margin: 0;
 		outline: 1px dotted #111;
-	}
-
-	li > code:first-child {
 		vertical-align: top;
-
-		&::after {
-			content: ": ";
-			color: initial;
-		}
 	}
 }
 
