Make span highlighting stand out

--- a/html-api-debugger/style.css
+++ b/html-api-debugger/style.css
@@ -79,6 +79,10 @@
     }
   }
 
+  .has-highlighted-span {
+    box-shadow: 0 0 4px 2px hotpink;
+  }
+
   .highlight-span {
     box-shadow:
       0 0 2px 1px hotpink,
