Prevent number inputs from showing up/down

--- a/html-api-debugger/style.css
+++ b/html-api-debugger/style.css
@@ -15,6 +15,14 @@
     box-sizing: border-box;
   }
 
+  input[type="number"] {
+    appearance: textfield;
+  }
+
+  ::-webkit-inner-spin-button {
+    display: none;
+  }
+
   .full-width {
     grid-column: 1 / -1;
   }
