Move copy buttons next to headings

--- a/html-api-debugger/style.css
+++ b/html-api-debugger/style.css
@@ -116,6 +116,16 @@
 	.highlight-span {
 		outline: 2px solid #0000ff77;
 	}
+
+	.heading-and-button {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+
+		button {
+			height: 100%;
+		}
+	}
 }
 
 #rendered_iframe {
