Start adding CSS selector support

--- a/html-api-debugger/style.css
+++ b/html-api-debugger/style.css
@@ -32,6 +32,10 @@
 		grid-column: 1 / -1;
 	}
 
+	.matches-selector {
+		outline: 1px dotted hotpink;
+	}
+
 	pre {
 		background-color: #fff;
 		border: inset 1px;
