Handle null bytes in more places

--- a/html-api-debugger/style.css
+++ b/html-api-debugger/style.css
@@ -58,7 +58,7 @@
 		font-size: inherit;
 	}
 
-	#input_html {
+	#input-html {
 		width: 100%;
 		min-height: 200px;
 		font-family: var(--monospace-font-family);
